# mkube

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix  mkube.nix  readme.md
.github/workflows/: build.yaml
.lnav/formats/: structured_logger_rust.json
src/: config.rs  lib.rs  library.rs  localfs.rs  main.rs  multifs.rs  nfo.rs
src/util/: mod.rs  owned_span.rs  rt_fmt_str.rs
src/views/: mod.rs  settings.rs
src/views/movie_manager/: details.rs  editor.rs  mod.rs  search.rs  table.rs
src/views/widgets/: button.rs  checkbox.rs  input.rs  labelled_checkbox.rs  labelled_input.rs  mod.rs
