[package]
name = "mkube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metadata = "0.1"
tmdb-api = "0.4"
tui = "0.19"
crossterm = { version = "0.25", features = [ "event-stream" ] }
remotefs = "^0.2.0"
url = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
quick-xml = { version = "0.29", features = [ "serialize", "async-tokio" ]}
serde = { version = "1", features = ["derive"] }
async-recursion = "1.0.4"
ffmpeg-next = "6"
remotefs-ftp = { version = "0.1", features = ["secure"], optional = true }
remotefs-smb = { version = "^0.2", optional = true }
urlencoding = "2"
futures-util = "0.3"
unicode-width = "^0.1"
unicode-segmentation = "1.9.0"
log = { version = "0.4", features = ["std", "serde"] }
structured-logger = "1"
confy = "0.5.1"

[features]
default = ["ftp", "smb"]
ftp = ["dep:remotefs-ftp"]
smb = ["dep:remotefs-smb"]
