[package]
name = "mkube"
version = "0.1.1"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metadata = "0.1"
tmdb-api = "0.4"
tui = "0.19"
crossterm = { version = "0.25", features = [ "event-stream" ] }
remotefs = "^0.2.0"
url = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "time", "macros", "fs", "sync"] }
reqwest = "0.11"
quick-xml = { version = "0.29", features = [ "serialize", "async-tokio" ]}
serde = { version = "1.0.184", features = ["derive"] }
ffmpeg-next = "6"
remotefs-ftp = { version = "0.1", features = ["secure"], optional = true }
remotefs-smb = { version = "^0.2", optional = true }
urlencoding = "2"
futures-util = "0.3"
unicode-width = "^0.1"
unicode-segmentation = "1.9.0"
log = { version = "0.4", features = ["std", "serde"] }
structured-logger = "1"
confy = "0.5.1"
oo7 = { version = "0.2.1", features = ["tokio", "native_crypto"], default_features = false, optional = true }
rand = { version = "0.8.5", optional = true }
futures-core = "0.3.28"

[features]
default = ["ftp", "secrets"]
ftp = ["dep:remotefs-ftp"]
smb = ["dep:remotefs-smb"]
secrets = ["dep:oo7", "dep:rand"]
